Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-4164

Codegen does not generate target-specific machine code for cross-compiled functions

Agile BoardAttach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • Impala 2.8.0
    • Impala 2.9.0
    • Backend

    Description

      I discovered this while playing around with different inlining settings. It turns out that clang's LLVM IR output has hidden "target-cpu" and "target-features" function attributes that force the functions to be compiled for generic x86-64 machines (since that is what we asked clang to compile for). These are not overridden at any point.

      Attachments

        Issue Links

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            kwho Michael Ho
            tarmstrong Tim Armstrong
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment